<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgrnd"
    android:theme="@style/AppTheme.NoActionBar">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:elevation="5dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@mipmap/progbar2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/color_silver" />

    <ListView
        android:id="@+id/leaderboard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="3dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:text="@string/points"
        android:textColor="#000000"
        android:layout_marginRight="37dp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="37dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:text="@string/rank"
        android:textColor="#000000"
        android:layout_marginLeft="37dp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@mipmap/trophy" />

</androidx.constraintlayout.widget.ConstraintLayout>