<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgpostlogin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nf.co.myipl.myipl.Register"
    tools:showIn="@layout/activity_register">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:elevation="5dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@mipmap/progbar2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@android:color/background_light"
        android:text="@string/title_activity_register"
        android:textColor="@color/black_color"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:fontFamily="casual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/showPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:alpha="0.7"
        android:background="#ffff"
        android:buttonTint="#000000"
        android:onClick="onClickShowPassword"
        android:text="@string/show_password"
        android:textColor="#000000"
        android:textColorLink="@android:color/holo_purple"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:allowUndo="false"
        android:background="@drawable/edittext"

        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:soundEffectsEnabled="false"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:targetApi="m"
        tools:text="Name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:soundEffectsEnabled="false"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rank"
        app:layout_constraintTop_toBottomOf="@+id/rank"
        tools:text="Password" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:soundEffectsEnabled="false"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBaseline_toBaselineOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/rank"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:text="Password" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Mobile"
        android:inputType="phone"
        android:soundEffectsEnabled="false"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/showPassword"
        tools:text="Mobile" />

    <EditText
        android:id="@+id/rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:soundEffectsEnabled="false"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="Username" />

    <EditText
        android:id="@+id/groupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:allowUndo="false"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="text"
        android:soundEffectsEnabled="false"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/contact"
        tools:ignore="UnusedAttribute"
        tools:text="Group name" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonstyle"
        android:onClick="reguser"
        android:text="Register"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/groupName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
