<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bgrnd"
    android:theme="@style/AppTheme.NoActionBar">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#414344"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="4dp"
        android:fadeScrollbars="true"
        android:fastScrollEnabled="true"
        android:minHeight="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        android:layout_marginStart="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="@+id/m1"
        app:layout_constraintTop_toBottomOf="@+id/notgiven2" />

    <TextView
        android:id="@+id/m1"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/match_1"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        android:layout_marginRight="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameText"
        app:layout_constraintEnd_toStartOf="@+id/m2" />

    <TextView
        android:id="@+id/m2"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/edittextheader"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/match_2"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBaseline_toBaselineOf="@+id/m1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/pText2b"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/pText2a"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/pText2b"
        app:layout_constraintEnd_toStartOf="@+id/pText2b" />

    <TextView
        android:id="@+id/notgiven2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/pText2b"
        app:layout_constraintStart_toStartOf="@+id/pText2a"
        app:layout_constraintTop_toBottomOf="@+id/pText2a" />

    <TextView
        android:id="@+id/pText1a"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/pText2b"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/pText1b"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/pText1a"
        app:layout_constraintStart_toEndOf="@+id/pText1a" />

    <TextView
        android:id="@+id/notgiven1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/pText1b"
        app:layout_constraintStart_toStartOf="@+id/pText1a"
        app:layout_constraintTop_toBottomOf="@+id/pText1b" />

</androidx.constraintlayout.widget.ConstraintLayout>